<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>
	<groupId>net.sf.testngdatabind</groupId>
	<artifactId>testng-databinding</artifactId>
	<version>3.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>TestNG DataBinding Parent POM</name>
	<description>Parent POM for a data binding framework targeting TestNG</description>
	<url>http://sourceforge.net/projects/testngdatabind</url>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<inceptionYear>2010</inceptionYear>
	<scm>
		<connection>scm:git:https://github.cm/mimarox/testng-databinding.git</connection>
		<developerConnection>scm:git:https://github.cm/mimarox/testng-databinding.git</developerConnection>
		<url>https://github.com/mimarox/testng-databinding</url>
	</scm>
	<developers>
		<developer>
			<id>mimarox</id>
			<name>Matthias Rothe</name>
			<email>mimarox@users.sourceforge.net</email>
			<url>http://www.matthiasrothe.com</url>
		</developer>
	</developers>
	<properties>
		<javadoc.title>TestNG Data Binding 3.0.0 API</javadoc.title>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<doctitle>${javadoc.title}</doctitle>
					<windowtitle>${javadoc.title}</windowtitle>
					<groups>
						<group>
							<title>Core Packages</title>
							<packages>net.sf.testng.databinding:net.sf.testng.databinding.core*:net.sf.testng.databinding.util</packages>
						</group>
						<group>
							<title>Data Source Packages</title>
							<packages>net.sf.testng.databinding.csv*:net.sf.testng.databinding.properties*:net.sf.testng.databinding.text*:net.sf.testng.databinding.xml*</packages>
						</group>
					</groups>
					<overview>src/javadoc/overview-summary.html</overview>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>testng-databinding-util</module>
				<module>testng-databinding-core</module>
				<module>testng-databinding-csv</module>
				<module>testng-databinding-properties</module>
				<module>testng-databinding-text</module>
				<module>testng-databinding-xml</module>
			</modules>
		</profile>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>signArtifacts</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.4</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>sourceforge-assembly</id>
			<properties>
				<delivery-version>${project.version}</delivery-version>
			</properties>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<failOnError>true</failOnError>
									<target>
										<exec executable="cmd" dir="." spawn="false">
											<arg value="/c" />
											<arg value="mvn.bat" />
											<arg value="clean" />
											<arg value="install" />
											<arg value="source:jar" />
											<arg value="javadoc:aggregate" />
											<arg value="-DperformRelease=true" />
										</exec>
										<exec executable="cmd" dir="./testng-databinding-delivery" spawn="false">
											<arg value="/c" />
											<arg value="mvn.bat" />
											<arg value="assembly:single" />
										</exec>
									</target>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>